// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing of ReceiveOperationsDiscriminators component render ReceiveOperationsDiscriminators component when receive operations is null 1`] = `
"self.receive_operation_handlers = {}
        self.receive_operation_discriminators = []"
`;

exports[`Testing of ReceiveOperationsDiscriminators component render ReceiveOperationsDiscriminators component with empty receive operations 1`] = `
"self.receive_operation_handlers = {}
        self.receive_operation_discriminators = []"
`;

exports[`Testing of ReceiveOperationsDiscriminators component render ReceiveOperationsDiscriminators component with receive operations 1`] = `
"self.receive_operation_handlers = {}
        self.receive_operation_discriminators = [{\\"key\\":\\"messageType\\",\\"value\\":\\"testMessageWithDiscriminator\\",\\"operation_id\\":\\"receiveMessage\\"}]"
`;

exports[`Testing of ReceiveOperationsDiscriminators component render ReceiveOperationsDiscriminators component without receive operations 1`] = `
"self.receive_operation_handlers = {}
        self.receive_operation_discriminators = []"
`;
